[gd_scene load_steps=7 format=2]

[ext_resource path="res://NC stand1.png" type="Texture" id=1]
[ext_resource path="res://NC stand2.png" type="Texture" id=2]
[ext_resource path="res://Enemy.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.7089
height = 88.8373

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "be",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 15.5
height = 84.2754

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147483649
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 9 )
rotation = -3.14159
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 2 )
animation = "be"

[node name="TurnAxis" type="Position2D" parent="."]

[node name="CastPoint" type="Position2D" parent="TurnAxis"]
position = Vector2( 20.835, 2.976 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 9 )
rotation = -3.14159
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
